kubernetes/base/hub-auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hub-auth
  labels:
    app: hub-auth
spec:
  selector:
    app: hub-auth
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
