kubernetes/base/hub-auth/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hub-auth-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls.certresolver: default
# NOTE: 호스트 및 경로 설정은 패치 파일에서 관리됩니다.
